Assignment 1/target/main/bkit/parser/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "';'", "','", "':'", "'.'", "'Body'", "'Break'", "'Continue'", 
                     "'Do'", "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", 
                     "'EndFor'", "'EndWhile'", "'For'", "'Function'", "'If'", 
                     "'Parameter'", "'Return'", "'Then'", "'While'", "'EndDo'", 
                     "'Var'", "'main'", "'='", "'-'", "'-.'", "'!'", "'*'", 
                     "'*.'", "'\\'", "'\\.'", "'%'", "'+'", "'+.'", "'&&'", 
                     "'||'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'=/='", "'<.'", "'>.'", "'<=.'", "'>=.'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "SEMI", "COMMA", 
                      "COLON", "DOT", "BODY", "BREAK", "CONTINUE", "DO", 
                      "ELSE", "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", 
                      "FOR", "FUNCTION", "IF", "PARAMETER", "RETURN", "THEN", 
                      "WHILE", "ENDDO", "VAR", "MAIN", "ASSIGN", "SUBTRACT", 
                      "SUBTRACT_F", "NOT", "MULTIPLY", "MULTIPLY_F", "DIVIDE", 
                      "DIVIDE_F", "MODULO", "ADD", "ADD_F", "AND", "OR", 
                      "EQUAL", "NOT_EQUAL", "LT", "GT", "LTE", "GTE", "NOT_EQUAL_F", 
                      "LT_F", "GT_F", "LTE_F", "GTE_F", "WS", "IDENTIFIER", 
                      "COMMENT", "BOOLEAN", "INTEGER", "FLOAT", "STRING", 
                      "ERROR_CHAR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", 
                      "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_global_variables = 1
    RULE_function_part = 2
    RULE_expression = 3
    RULE_operands = 4
    RULE_variable_declaration = 5
    RULE_array_name = 6
    RULE_variable_name = 7
    RULE_variable_initializer = 8
    RULE_variable_value = 9
    RULE_array_value = 10
    RULE_array_value_list = 11
    RULE_function_declaration = 12
    RULE_function_main = 13
    RULE_parameters = 14
    RULE_parameter_list = 15
    RULE_statement = 16
    RULE_post_statement = 17
    RULE_statement_list = 18
    RULE_assignment = 19
    RULE_indices = 20
    RULE_if_statement = 21
    RULE_if_start = 22
    RULE_elseif_statement = 23
    RULE_else_statement = 24
    RULE_for_statement = 25
    RULE_for_condition = 26
    RULE_while_statement = 27
    RULE_do_while_statement = 28
    RULE_break_statement = 29
    RULE_continue_statement = 30
    RULE_in_parameters = 31
    RULE_call_statement = 32
    RULE_return_statement = 33
    RULE_literal = 34

    ruleNames =  [ "program", "global_variables", "function_part", "expression", 
                   "operands", "variable_declaration", "array_name", "variable_name", 
                   "variable_initializer", "variable_value", "array_value", 
                   "array_value_list", "function_declaration", "function_main", 
                   "parameters", "parameter_list", "statement", "post_statement", 
                   "statement_list", "assignment", "indices", "if_statement", 
                   "if_start", "elseif_statement", "else_statement", "for_statement", 
                   "for_condition", "while_statement", "do_while_statement", 
                   "break_statement", "continue_statement", "in_parameters", 
                   "call_statement", "return_statement", "literal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    SEMI=7
    COMMA=8
    COLON=9
    DOT=10
    BODY=11
    BREAK=12
    CONTINUE=13
    DO=14
    ELSE=15
    ELSEIF=16
    ENDBODY=17
    ENDIF=18
    ENDFOR=19
    ENDWHILE=20
    FOR=21
    FUNCTION=22
    IF=23
    PARAMETER=24
    RETURN=25
    THEN=26
    WHILE=27
    ENDDO=28
    VAR=29
    MAIN=30
    ASSIGN=31
    SUBTRACT=32
    SUBTRACT_F=33
    NOT=34
    MULTIPLY=35
    MULTIPLY_F=36
    DIVIDE=37
    DIVIDE_F=38
    MODULO=39
    ADD=40
    ADD_F=41
    AND=42
    OR=43
    EQUAL=44
    NOT_EQUAL=45
    LT=46
    GT=47
    LTE=48
    GTE=49
    NOT_EQUAL_F=50
    LT_F=51
    GT_F=52
    LTE_F=53
    GTE_F=54
    WS=55
    IDENTIFIER=56
    COMMENT=57
    BOOLEAN=58
    INTEGER=59
    FLOAT=60
    STRING=61
    ERROR_CHAR=62
    ILLEGAL_ESCAPE=63
    UNCLOSE_STRING=64
    UNTERMINATED_COMMENT=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_variables(self):
            return self.getTypedRuleContext(BKITParser.Global_variablesContext,0)


        def function_part(self):
            return self.getTypedRuleContext(BKITParser.Function_partContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.global_variables()
            self.state = 71
            self.function_part()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Global_variablesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Variable_declarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.Variable_declarationContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_global_variables

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_variables" ):
                return visitor.visitGlobal_variables(self)
            else:
                return visitor.visitChildren(self)




    def global_variables(self):

        localctx = BKITParser.Global_variablesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_global_variables)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 73
                self.variable_declaration()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_partContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_main(self):
            return self.getTypedRuleContext(BKITParser.Function_mainContext,0)


        def function_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Function_declarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.Function_declarationContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_function_part

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_part" ):
                return visitor.visitFunction_part(self)
            else:
                return visitor.visitChildren(self)




    def function_part(self):

        localctx = BKITParser.Function_partContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_function_part)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 79
                    self.function_declaration() 
                self.state = 84
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 85
            self.function_main()
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 86
                self.function_declaration()
                self.state = 91
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(BKITParser.ExpressionContext,i)


        def call_statement(self):
            return self.getTypedRuleContext(BKITParser.Call_statementContext,0)


        def SUBTRACT(self):
            return self.getToken(BKITParser.SUBTRACT, 0)

        def SUBTRACT_F(self):
            return self.getToken(BKITParser.SUBTRACT_F, 0)

        def NOT(self):
            return self.getToken(BKITParser.NOT, 0)

        def operands(self):
            return self.getTypedRuleContext(BKITParser.OperandsContext,0)


        def MULTIPLY(self):
            return self.getToken(BKITParser.MULTIPLY, 0)

        def MULTIPLY_F(self):
            return self.getToken(BKITParser.MULTIPLY_F, 0)

        def DIVIDE(self):
            return self.getToken(BKITParser.DIVIDE, 0)

        def DIVIDE_F(self):
            return self.getToken(BKITParser.DIVIDE_F, 0)

        def MODULO(self):
            return self.getToken(BKITParser.MODULO, 0)

        def ADD(self):
            return self.getToken(BKITParser.ADD, 0)

        def ADD_F(self):
            return self.getToken(BKITParser.ADD_F, 0)

        def AND(self):
            return self.getToken(BKITParser.AND, 0)

        def OR(self):
            return self.getToken(BKITParser.OR, 0)

        def EQUAL(self):
            return self.getToken(BKITParser.EQUAL, 0)

        def NOT_EQUAL(self):
            return self.getToken(BKITParser.NOT_EQUAL, 0)

        def LT(self):
            return self.getToken(BKITParser.LT, 0)

        def GT(self):
            return self.getToken(BKITParser.GT, 0)

        def LTE(self):
            return self.getToken(BKITParser.LTE, 0)

        def GTE(self):
            return self.getToken(BKITParser.GTE, 0)

        def NOT_EQUAL_F(self):
            return self.getToken(BKITParser.NOT_EQUAL_F, 0)

        def LT_F(self):
            return self.getToken(BKITParser.LT_F, 0)

        def GT_F(self):
            return self.getToken(BKITParser.GT_F, 0)

        def LTE_F(self):
            return self.getToken(BKITParser.LTE_F, 0)

        def GTE_F(self):
            return self.getToken(BKITParser.GTE_F, 0)

        def indices(self):
            return self.getTypedRuleContext(BKITParser.IndicesContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 6
        self.enterRecursionRule(localctx, 6, self.RULE_expression, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 93
                self.match(BKITParser.T__0)
                self.state = 94
                self.expression(0)
                self.state = 95
                self.match(BKITParser.T__1)
                pass

            elif la_ == 2:
                self.state = 97
                self.call_statement()
                pass

            elif la_ == 3:
                self.state = 98
                _la = self._input.LA(1)
                if not(_la==BKITParser.SUBTRACT or _la==BKITParser.SUBTRACT_F):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 99
                self.expression(7)
                pass

            elif la_ == 4:
                self.state = 100
                self.match(BKITParser.NOT)
                self.state = 101
                self.expression(6)
                pass

            elif la_ == 5:
                self.state = 102
                self.operands()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 121
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 119
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
                    if la_ == 1:
                        localctx = BKITParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 105
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 106
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.MULTIPLY) | (1 << BKITParser.MULTIPLY_F) | (1 << BKITParser.DIVIDE) | (1 << BKITParser.DIVIDE_F) | (1 << BKITParser.MODULO))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 107
                        self.expression(6)
                        pass

                    elif la_ == 2:
                        localctx = BKITParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 108
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 109
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.SUBTRACT) | (1 << BKITParser.SUBTRACT_F) | (1 << BKITParser.ADD) | (1 << BKITParser.ADD_F))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 110
                        self.expression(5)
                        pass

                    elif la_ == 3:
                        localctx = BKITParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 111
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 112
                        _la = self._input.LA(1)
                        if not(_la==BKITParser.AND or _la==BKITParser.OR):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 113
                        self.expression(4)
                        pass

                    elif la_ == 4:
                        localctx = BKITParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 114
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 115
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.EQUAL) | (1 << BKITParser.NOT_EQUAL) | (1 << BKITParser.LT) | (1 << BKITParser.GT) | (1 << BKITParser.LTE) | (1 << BKITParser.GTE) | (1 << BKITParser.NOT_EQUAL_F) | (1 << BKITParser.LT_F) | (1 << BKITParser.GT_F) | (1 << BKITParser.LTE_F) | (1 << BKITParser.GTE_F))) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 116
                        self.expression(3)
                        pass

                    elif la_ == 5:
                        localctx = BKITParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 117
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 118
                        self.indices()
                        pass

             
                self.state = 123
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class OperandsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(BKITParser.LiteralContext,0)


        def IDENTIFIER(self):
            return self.getToken(BKITParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_operands

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperands" ):
                return visitor.visitOperands(self)
            else:
                return visitor.visitChildren(self)




    def operands(self):

        localctx = BKITParser.OperandsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_operands)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.BOOLEAN, BKITParser.INTEGER, BKITParser.FLOAT, BKITParser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 124
                self.literal()
                pass
            elif token in [BKITParser.IDENTIFIER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 125
                self.match(BKITParser.IDENTIFIER)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def variable_initializer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Variable_initializerContext)
            else:
                return self.getTypedRuleContext(BKITParser.Variable_initializerContext,i)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_variable_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_declaration" ):
                return visitor.visitVariable_declaration(self)
            else:
                return visitor.visitChildren(self)




    def variable_declaration(self):

        localctx = BKITParser.Variable_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_variable_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(BKITParser.VAR)
            self.state = 129
            self.match(BKITParser.COLON)
            self.state = 130
            self.variable_initializer()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 131
                self.match(BKITParser.COMMA)
                self.state = 132
                self.variable_initializer()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BKITParser.IDENTIFIER, 0)

        def INTEGER(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INTEGER)
            else:
                return self.getToken(BKITParser.INTEGER, i)

        def getRuleIndex(self):
            return BKITParser.RULE_array_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_name" ):
                return visitor.visitArray_name(self)
            else:
                return visitor.visitChildren(self)




    def array_name(self):

        localctx = BKITParser.Array_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_array_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(BKITParser.IDENTIFIER)
            self.state = 144 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 141
                self.match(BKITParser.T__2)
                self.state = 142
                self.match(BKITParser.INTEGER)
                self.state = 143
                self.match(BKITParser.T__3)
                self.state = 146 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKITParser.T__2):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_nameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(BKITParser.IDENTIFIER, 0)

        def array_name(self):
            return self.getTypedRuleContext(BKITParser.Array_nameContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variable_name

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_name" ):
                return visitor.visitVariable_name(self)
            else:
                return visitor.visitChildren(self)




    def variable_name(self):

        localctx = BKITParser.Variable_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_variable_name)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 148
                self.match(BKITParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.array_name()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_initializerContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def variable_name(self):
            return self.getTypedRuleContext(BKITParser.Variable_nameContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def variable_value(self):
            return self.getTypedRuleContext(BKITParser.Variable_valueContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_variable_initializer

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariable_initializer" ):
                return visitor.visitVariable_initializer(self)
            else:
                return visitor.visitChildren(self)




    def variable_initializer(self):

        localctx = BKITParser.Variable_initializerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_variable_initializer)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.variable_name()
            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 153
                self.match(BKITParser.ASSIGN)
                self.state = 154
                self.variable_value()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Variable_valueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(BKITParser.ExpressionContext,0)


        def array_value_list(self):
            return self.getTypedRuleContext(BKITParser.Array_value_listContext,0)

